--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
         "laravel-mix": "^6.0.6",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.2",
-        "tailwindcss": "^3.0.23"
+        "tailwindcss": "^3.0.23",
+        "ts-loader": "^9.2.7",
+        "typescript": "^4.6.2"
     },
     "dependencies": {
+        "ckeditor5-custom-build": "github:Bricklou/ckeditor5-custom",
         "feather-icons": "^4.28.0"
     }
 }
