--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/ckeditor.js": "/js/ckeditor.js",
     "/css/app.css": "/css/app.css",
     "/images/feather-sprite.svg": "/images/feather-sprite.svg"
 }
