--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "postcss": "^8.1.14",
+        "laravel-mix": "^6.0.43",
+        "postcss": "^8.4.8",
         "postcss-import": "^14.0.2",
-        "tailwindcss": "^3.0.23",
-        "ts-loader": "^9.2.7",
-        "typescript": "^4.6.2"
+        "tailwindcss": "^3.0.23"
     },
     "dependencies": {
         "ckeditor5-custom-build": "github:Bricklou/ckeditor5-custom",
