--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@types/prismjs": "^1.26.0",
         "autoprefixer": "^10.4.2",
+        "babel-plugin-prismjs": "^2.1.0",
         "laravel-mix": "^6.0.43",
         "postcss": "^8.4.8",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "@tailwindcss/typography": "^0.5.2",
         "ckeditor5-custom-build": "github:Bricklou/ckeditor5-custom",
-        "feather-icons": "^4.28.0"
+        "feather-icons": "^4.28.0",
+        "prismjs": "^1.27.0"
     }
 }
