--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/scout": "^9.4",
         "laravel/tinker": "^2.7",
-        "orchid/platform": "^12.1"
+        "orchid/platform": "^12.1",
+        "ueberdosis/pandoc": "^0.7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
