Dockerfile changes and packages update

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,16 @@
 # ==========
 # PHP builder
 # ==========
-FROM php:8-fpm-alpine as php_base
+FROM php:8-fpm-bullseye as php_base
 
 ENV APP_DEBUG=false
 ENV APP_ENV=production
 
 RUN set -ex \
-    && apk add --no-cache --update --virtual .build-deps \
-    libxml2-dev libzip-dev libwebp-dev oniguruma-dev git $PHPIZE_DEPS \
-    && apk add --no-cache --update \
-    libxml2 libzip oniguruma postgresql-dev \
+    && apt-get update \
+    && apt-get install -y $PHPIZE_DEPS libxml2-dev libzip-dev libwebp-dev \
+    libxml2 zip libpq-dev \
+    pandoc texlive-base \
     # Install extensions for php
     && pecl install redis \
     && docker-php-ext-install -j$(nproc) bcmath pgsql pdo pdo_pgsql zip pcntl \
@@ -18,37 +18,34 @@ RUN set -ex \
     # Install laravel dependencies
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
     # Removing useless packages
-    && apk del --no-cache .build-deps \
-    && rm -rf /var/cache/apk/*
+    && rm -rf /var/lib/{apt,dpkg,cache,log}/
 
-WORKDIR /app
-COPY --chown=docker:docker . /app
+WORKDIR /www
+COPY --chown=docker:docker . /www
 
 # ==========
 # NodeJS builder
 # ==========
-FROM node:alpine as node_dependencies
+FROM node:bullseye as node_dependencies
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false
 
-COPY --from=php_base /app /app
-WORKDIR /app
+COPY --from=php_base /www /www
+WORKDIR /www
 RUN npm set progress=false && \
     npm config set depth 0 && \
     npm clean-install && \
     npm run production && \
     rm -rf node_modules
 
-COPY /app /app
-
 # ========
 # PHP base
 # ========
 FROM php_base
 
-COPY --from=node_dependencies --chown=docker:docker /app /app
+COPY --from=node_dependencies --chown=docker:docker /www /www
 
-WORKDIR /app
+WORKDIR /www
 
 COPY ./docker/entrypoint.sh /entrypoint.sh
 
