--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@twemoji/api": "^14.1.2",
+    "@twemoji/svg": "^0.1.2",
     "postcss": "^8.4.31"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@tailwindcss/typography": "^0.5.10",
     "cssnano": "^6.0.1",
     "cssnano-preset-advanced": "^6.0.1",
