--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,3 +44,5 @@ jobs:
           platforms: linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            PLAUSIBLE_ENDPOINT=${{ env.PLAUSIBLE_ENDPOINT }}
