--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: arm64
+          platforms: linux/arm64
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -48,7 +48,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags:
             type=raw,value=latest,enable={{is_default_branch}}
-
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
