fix: emojis not rendering and remove `flex-1` class name on some elements

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -67,7 +67,7 @@ markup:
 enableEmoji: true
 enableRobotsTXT: true
 removePathAccents: true
-disableKinds: ["taxonomy", "term"]
+disableKinds: ["taxonomy"]
 cleanDestinationDir: true
 disableFastRender: true
 enableGitInfo: true
