--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,8 +46,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags:
-            type=raw,value=latest,enable={{is_default_branch}}
+          tags: type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -58,4 +57,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            PLAUSIBLE_ENDPOINT=${{ env.PLAUSIBLE_ENDPOINT }}
+            PLAUSIBLE_ENDPOINT=${{ vars.PLAUSIBLE_ENDPOINT }}
