fix(typos): `dependencyDashboard` has a typos in renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,7 +3,7 @@
   "extends": [
     "config:recommended",
     "docker:enableMajor",
-    ":dependecyDashboard",
+    ":dependencyDashboard",
     ":automergePatch",
     ":semanticCommits",
     ":timezone(Europe/Paris)",
