--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,23 @@
 {
-  "plugins": ["prettier-plugin-go-template"],
+  "plugins": [
+    "prettier-plugin-go-template"
+  ],
   "overrides": [
     {
-      "files": ["*.html"],
+      "files": [
+        "*.html"
+      ],
       "options": {
         "parser": "go-template"
+      }
+    },
+    {
+      "files": [
+        "*.md"
+      ],
+      "options": {
+        "printWidth": 160,
+        "proseWrap": "always"
       }
     }
   ]
