--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "dependencies": {
     "@twemoji/api": "^15.1.0",
     "@twemoji/svg": "^15.0.0",
-    "postcss": "^8.4.45"
+    "postcss": "^8.5.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.6",
-    "@babel/core": "^7.25.2",
-    "@tailwindcss/typography": "^0.5.15",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@tailwindcss/cli": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "cssnano": "^7.0.6",
     "cssnano-preset-advanced": "^7.0.6",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "prettier-plugin-go-template": "^0.0.15",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^4.0.0"
   }
 }
